--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="screenBackground">#2196F3</color>
     <color name="buttonBackground">#BBDEFB</color>
+    <color name="toolbarBackground">#006400</color>
 </resources>
