--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,8 @@
     <color name="screenBackground">#2196F3</color>
     <color name="buttonBackground">#BBDEFB</color>
     <color name="toolbarBackground">#006400</color>
+
+    <color name="tank_table_row_background">#B0B0B0</color>
+    <color name="delete_button_background">#FF0000</color>
+    <color name="modify_button_background">#00008B</color>
 </resources>
