--- a/app/src/main/res/layout/tank_details.xml
+++ b/app/src/main/res/layout/tank_details.xml
@@ -14,7 +14,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -34,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:text="Country:Soviet Union"
+        android:text="@string/details_country"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/picture_imageview" />
 
@@ -44,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
-        android:text="Year: 1945"
+        android:text="@string/details_year"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/picture_imageview" />
 
@@ -53,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Type: Medium Tank"
+        android:text="@string/details_type"
         app:layout_constraintEnd_toStartOf="@+id/year_textview"
         app:layout_constraintStart_toEndOf="@+id/country_textview"
         app:layout_constraintTop_toBottomOf="@+id/picture_imageview" />
@@ -63,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Gun: 76.2 mm F-34 tank gun"
+        android:text="@string/details_gun"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/type_textview" />
@@ -73,7 +72,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Engine: Model V-2-34"
+        android:text="@string/details_engine"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/gun_textview" />
@@ -83,7 +82,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Number of crew members: 4"
+        android:text="@string/details_crew"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/engine_textview" />
@@ -93,17 +92,17 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="70dp"
-        android:src="@drawable/tank_top_down_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/crew_textview" />
+        app:layout_constraintTop_toBottomOf="@+id/crew_textview"
+        android:src="@drawable/tank_top_down_view"/>
 
     <TextView
         android:id="@+id/armour_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Armour Layout:"
+        android:text="@string/details_armour_layout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/crew_textview" />
@@ -112,7 +111,7 @@
         android:id="@+id/side_armour_textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="40 mm"
+        android:text="@string/details_side_armour"
         app:layout_constraintBottom_toTopOf="@+id/armour_imageview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -122,7 +121,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
-        android:text="47 mm"
+        android:text="@string/details_front_armour"
         app:layout_constraintBottom_toBottomOf="@+id/armour_imageview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/armour_imageview"
@@ -133,7 +132,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="40dp"
-        android:text="45 mm"
+        android:text="@string/details_rear_armour"
         app:layout_constraintBottom_toBottomOf="@+id/armour_imageview"
         app:layout_constraintEnd_toStartOf="@+id/armour_imageview"
         app:layout_constraintStart_toStartOf="parent"
@@ -141,10 +140,9 @@
 
     <TextView
         android:id="@+id/description_textview"
-        android:layout_width="wrap_content"
+        android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="TextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/armour_imageview" />
