--- a/app/src/main/res/layout/tank_form.xml
+++ b/app/src/main/res/layout/tank_form.xml
@@ -85,6 +85,7 @@
         android:layout_marginTop="15dp"
         android:background="@color/white"
         android:hint="Year"
+        android:inputType="number"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="#52afaa"
@@ -100,6 +101,7 @@
         android:layout_marginEnd="20dp"
         android:background="@color/white"
         android:hint="Crew"
+        android:inputType="number"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="#52afaa"
@@ -153,6 +155,7 @@
         android:layout_marginTop="15dp"
         android:background="@color/white"
         android:hint="Front"
+        android:inputType="number"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="#52afaa"
@@ -167,6 +170,7 @@
         android:layout_marginTop="15dp"
         android:background="@color/white"
         android:hint="Side"
+        android:inputType="number"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="#52afaa"
@@ -182,6 +186,7 @@
         android:layout_marginEnd="20dp"
         android:background="@color/white"
         android:hint="Rear"
+        android:inputType="number"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="#52afaa"
@@ -225,7 +230,7 @@
         app:layout_constraintTop_toBottomOf="@id/form_description">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/form_ok_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/ok_button_text"
@@ -233,7 +238,7 @@
             android:layout_margin="20dp"/>
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/form_cancel_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/cancel_button_text"
