--- a/app/src/main/res/layout/tank_list.xml
+++ b/app/src/main/res/layout/tank_list.xml
@@ -24,16 +24,16 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/tank_list_header">
         <TableLayout
             android:id="@+id/tank_table"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tank_list_header"
+            app:layout_constraintTop_toTopOf="parent"
             android:stretchColumns="*">
         </TableLayout>
     </ScrollView>
