--- a/app/src/main/res/layout/tank_list.xml
+++ b/app/src/main/res/layout/tank_list.xml
@@ -8,7 +8,65 @@
     android:background="@color/screenBackground"
     tools:context=".TankList">
 
-    <TextView
+    <EditText
+        android:id="@+id/list_search_name"
+        android:layout_width="120dp"
+        android:layout_height="30dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/white"
+        android:hint="@string/name_hint"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textColorHint="#52afaa"
+        app:layout_constraintEnd_toStartOf="@id/list_types_spinner"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Spinner
+        android:id="@+id/list_types_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toStartOf="@id/list_countries_spinner"
+        app:layout_constraintStart_toEndOf="@+id/list_search_name"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Spinner
+        android:id="@+id/list_countries_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/list_types_spinner"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/list_back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="30dp"
+        android:text="@string/back_button_text"
+        android:backgroundTint="@color/delete_button_background"
+        app:layout_constraintEnd_toStartOf="@id/list_search_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/list_search_name"/>
+
+    <Button
+        android:id="@+id/list_search_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="50dp"
+        android:text="@string/search_button_text"
+        android:backgroundTint="@color/ok_button_background"
+        app:layout_constraintStart_toEndOf="@id/list_back_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/list_search_name"/>
+
+    <!--<TextView
         android:id="@+id/tank_list_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -20,14 +78,14 @@
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />-->
 
     <ScrollView
         android:id="@+id/tank_list_scroll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/tank_list_header"
-        android:paddingBottom="100dp">
+        app:layout_constraintTop_toBottomOf="@+id/list_search_button"
+        android:paddingBottom="125dp">
         <TableLayout
             android:id="@+id/tank_table"
             android:layout_width="match_parent"
