--- a/app/src/main/res/layout/tank_list.xml
+++ b/app/src/main/res/layout/tank_list.xml
@@ -24,7 +24,7 @@
 
     <Spinner
         android:id="@+id/list_types_spinner"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toStartOf="@id/list_countries_spinner"
@@ -33,7 +33,7 @@
 
     <Spinner
         android:id="@+id/list_countries_spinner"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
