--- a/app/src/main/res/layout/tank_details.xml
+++ b/app/src/main/res/layout/tank_details.xml
@@ -16,7 +16,8 @@
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="32sp" />
 
     <ImageView
         android:id="@+id/picture_imageview"
