--- a/app/src/main/res/layout/name_country_row.xml
+++ b/app/src/main/res/layout/name_country_row.xml
@@ -12,7 +12,8 @@
         android:padding="10dip"
         android:text="Tank name"
         android:textColor="@color/black"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:textStyle="italic"/>
 
     <TextView
         android:id="@+id/country_textView"
