--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,7 @@
 
     <color name="tank_table_row_background">#B0B0B0</color>
     <color name="tank_table_second_row_background">#99FF99</color>
+    <color name="main_button_background">#8B4513</color>
     <color name="delete_button_background">#FF0000</color>
     <color name="modify_button_background">#00008B</color>
     <color name="ok_button_background">#228B22</color>
